# switchbox-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  cdn-nginx.conf  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml  fly-deploy.yml
app/: base.py  config.py  conftest.py  database.py  logging_config.py  main.py
app/admin/: router.py
app/audit/: schemas.py  service.py
app/auth/: router.py  schemas.py  service.py
app/environments/: connection.py  models.py  router.py  schemas.py  service.py
app/flags/: cdn_publisher.py  models.py  router.py  schemas.py  service.py
app/middleware/: auth.py  error_handler.py  logging_middleware.py
app/models/: __init__.py  audit_log.py  flag.py  project.py  rule.py  user.py
app/projects/: models.py  router.py  schemas.py  service.py
app/routers/: admin.py  auth.py  contact.py  flags.py  projects.py  rules.py
app/rules/: models.py  router.py  schemas.py  service.py
app/schemas/: flag.py  project.py
app/services/: audit_service.py  auth_service.py  cdn_publisher.py  flag_service.py  project_service.py  rule_service.py
migrations/: env.py
migrations/versions/: 05a4b0e3d1ed_create_initial_tables.py  b7c2a1d3e4f5_add_users_table_and_project_user_fk.py  c3d4e5f6a7b8_add_environments_and_flag_environments.py  d4e5f6a7b8c9_add_sdk_key_to_environments.py  (+2 more)
scripts/: integration_test.py
tests/: conftest.py  test_api.py  test_audit.py  test_auth.py  test_cdn_publisher.py  test_flags.py  test_health.py  test_models.py  test_projects.py  test_rules.py
(+10 files in other folders)
